set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-O3 -flto -Wall -Wextra -Wpedantic -pedantic -Werror -lncurses")
project(dnd_egg LANGUAGES CXX)
find_package(Curses REQUIRED)
include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${CURSES_INCLUDE_DIR})
add_executable(dnd_egg main.cpp)
target_link_libraries(dnd_egg ${CURSES_LIBRARIES})
